# Elemental

./: .gitignore  .gitmodules  .hgignore  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  ElConfig.cmake.in  LICENSE  LICENSE-LAPACK-DERIV  LICENSE-PURE  Makefile  Makefile.backup  PUBLICATIONS  PUBLICATIONS.bib  README  README.md  REFERENCES  REFERENCES.bib  TODO  TODO-CS  appveyor.yml
.github/workflows/: ci.yml
ci/: install-msmpi.ps1
cmake/: CMakeDummyFunction.cpp  CheckCXXCompilerFlag.cmake  CreateElVars.cmake  ElCheckCSourceCompiles.cmake  ElCheckFunctionExists.cmake  ElLibraryName.cmake  ElSub.cmake  ElVars.cmake  ElemCXXTests.cmake  ElemFortranTests.cmake  ElemMPITests.cmake  ElemMathTests.cmake  ElemOpenMPTests.cmake  ElemQt5Tests.cmake  ElemSWIGTests.cmake  ElemSub.cmake  FindCXXFeatures.cmake  FindNumPy.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  README.md  Toolchain-BlueGeneP-xl.cmake  config.h.cmake  config.h.in  elemental_sub.cmake  elemvariables.cmake  find_library_list.cmake  language_support_v2.cmake
cmake/configure_files/: ElVars.in  ElementalConfig.cmake.in  ElementalConfigVersion.cmake.in  config.h.in  environment.py.in
cmake/detect/: CXX.cmake  Fortran.cmake  MPI.cmake  OpenMP.cmake  Qt5.cmake
cmake/external_projects/: ElMath.cmake  MPICH.cmake
cmake/modules/: CMakeCheckCompilerFlagCommonPatterns.cmake  ElCheckCSourceCompiles.cmake  ElLibraryName.cmake  ElSetParentScope.cmake  FindCXXFeatures.cmake  FindGMP.cmake  FindMETIS.cmake  FindMPC.cmake  FindMPFR.cmake  FindParMETIS.cmake  FindQD.cmake  FindValgrind.cmake
cmake/tests/: CXX.cmake  Fortran.cmake  MPI.cmake  Math.cmake  OpenMP.cmake  Qt5.cmake
cmake/toolchains/: BGP-Intrepid-xl-essl.cmake  BGP-Intrepid-xl.cmake  BGP-Shaheen-xl-essl.cmake  BGP-Shaheen-xl.cmake  BGP-xl_apr2011-essl_4.3.1-1.cmake  BGP-xl_aug2010-ESSL_4.3.1-1.cmake  BGP-xl_aug2011-essl_4.3.1-1.cmake  BGP-xl_dec2010-essl_4.3.1-1.cmake  BGQ-JUQUEEN-clang-essl.cmake  BGQ-Juqueen-xl-essl.cmake  BGQ-Juqueen-xl.cmake  BGQ-Mira-clang-essl.cmake  BGQ-Mira-gnu-essl.cmake  BGQ-Vesta-clang-essl.cmake  BGQ-Vesta-clang-netlib.cmake  BGQ-Vesta-gnu-essl.cmake  BGQ-Vesta-gnu-netlib.cmake  BGQ-Vesta-xl-essl.cmake  BGQ-Vesta-xl-netlib.cmake  BGQ-gnu-netlib.cmake  Edison-gnu-mpich-libsci.cmake  Edison-intel-mpich-mkl.cmake  Hopper-gnu-mpich2-libsci.cmake  Hopper-gnu_4.7.1-mpich2_5.4.5-libsci_11.0.06.cmake  Lonestar-intel-mvapich2-mkl.cmake  Lonestar-intel_11.1-mvapich2_1.6-mkl_10.3.cmake  Longhorn-intel-mvapich2-mkl.cmake  Longhorn-intel_11.1-mvapich2_1.4-mkl_10.2.cmake  Mac-MPI-Accelerate.cmake  README.md  Ranger-gcc_4.4-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-gcc_4.4-mvapich_1.0.1-mkl_10.0.1.014.cmake  Ranger-gnu-mvapich-mkl.cmake  Ranger-gnu-mvapich2-mkl.cmake  Ranger-intel-mvapich-mkl.cmake  Ranger-intel-mvapich2-mkl.cmake  Ranger-intel_10.1-mvapich2_1.2-mkl_10.0.1.014.cmake  Ranger-intel_10.1-mvapich_1.0.1-mkl_10.0.1.014.cmake  Sherlock-gnu-openmpi-mkl.cmake  Sherlock-intel-impi-mkl.cmake  (+2 more)
compiler_bugs/MSVC/constexpr/: CMakeLists.txt  constexpr.cpp
contrib/PMRRR-0.6/: CMakeLists.txt  Makefile.backup  README  make.inc
contrib/PMRRR-0.6/EXAMPLES/C/: Makefile.gnu.jugene  Makefile.ibm.jugene  Makefile.intel  main_all.c  main_ind.c  main_val.c
contrib/PMRRR-0.6/EXAMPLES/Fortran/: Makefile  Makefile.intel  Wilkinson21.data  maina.f  maini.f  mainv.f
contrib/PMRRR-0.6/INCLUDE/: counter.h  global.h  plarre.h  plarrv.h  pmrrr.h  queue.h  rrr.h  structs.h
contrib/PMRRR-0.6/INSTALL/: make.inc.gnu  make.inc.ibm  make.inc.ibm.jugene  make.inc.intel
contrib/PMRRR-0.6/SRC/: plarre.c  plarrv.c  pmrrr.c  process_c_task.c  process_r_task.c  process_s_task.c  tasks.c
contrib/PMRRR-0.6/SRC/BLAS/: odscal.f
contrib/pmrrr/: CMakeLists.txt  README
contrib/pmrrr/include/: plarre.h  pmrrr.h  tasks.h
contrib/pmrrr/src/: odscal.c  plarre.c  plarrv.c  pmrrr.c  pmrrr_dscal.c  process_c_task.c  process_r_task.c  process_s_task.c  queue.c  rrr.c
contrib/pmrrr/src/blas/: xdcopy.f
contrib/pmrrr/src/lapack/: dlar1v.f  xdisnan.f  xdlae2.f  xdlaebz.f  xdlaev2.f  xdlamch.f  xdlanst.f  xdlar1v.f  xdlarnv.f  xdlarra.f  xdlarre.f  xdlarrf.f  xdlarrv.f  xdlasq6.f  xieeeck.f  xilaenv.f  xlsame.f  xxerbla.f
contrib/pmrrr/src/lapack/sequential/: xdlaset.f  xdlasq3.f  xdlasq4.f  xdlasq5.f  xdlasrt.f  xdstemr.f  xdswap.f
debian/: changelog  control  copyright  rules
doc/: Makefile  make.bat
examples/: README.md
include/: El-C.h  El-lite.h  El-lite.hpp  El.h  El.hpp  El.py  Elemental.h  Elemental.hpp  ElementalBLAS.h  ElementalBLASInternal.h  ElementalBLAS_Internal.h  ElementalDistMatrix.h  ElementalDistMatrix_MC_MR.h  ElementalDistMatrix_MC_Star.h  ElementalDistMatrix_MD_Star.h  ElementalDistMatrix_MR_MC.h  ElementalDistMatrix_MR_Star.h  ElementalDistMatrix_Star_MC.h  ElementalDistMatrix_Star_MD.h  ElementalDistMatrix_Star_MR.h  ElementalDistMatrix_Star_Star.h  ElementalDistMatrix_Star_VC.h  ElementalDistMatrix_Star_VR.h  ElementalDistMatrix_VC_Star.h  ElementalDistMatrix_VR_Star.h  ElementalEnvironment.h  ElementalGrid.h  ElementalLAPACK.h  ElementalLAPACKInternal.h  ElementalLAPACK_Internal.h  ElementalMatrix.h  ElementalMemory.h  ElementalPartitioning.h  ElementalRandom.h  ElementalTypes.h  ElementalUtilities.h  README.md  elemental-lite.hpp  elemental.hpp
octave/: LUMod.m  LUModDriver.m  LUModSimple.m  LUModSimpleDriver.m
package/: elemental.spec  libelemental.spec
package_example/: CMakeLists.txt  driver.cc
python/: __init__.py  control.py  io.py  lattice.py  matrices.py  scrap
redhat/: elemental-release.spec  elemental.spec
sandbox/: Makefile  test.cpp
src/: README.md  control-C.cpp  global.cpp  io-C.cpp  io.cpp  lattice-C.cpp  matrices-C.cpp  mpi_ops.cpp  optimization-C.cpp  settings.cpp  sparse_direct-C.cpp
swig/: blas.i  common.swg  control.i  convex.i  elem.i  elem_blas.i  elem_convex.i  elem_lapack.i  elem_matrices.i  elem_view.i  io.i  lapack.i  matrices.i  mpi.i  view.i  walsh.py
test/: DistMatrix.cpp
tests/: Makefile.cmake  README.md
travis/: install-mpi.sh
vagrant/: README.md
(+5902 files in other folders)
